# tracing-json-fmt-repro

./: Cargo.toml
src/: main.rs
